Fix bottom spacing below map

--- a/frontend/src/components/AudioTour/AudioTour.css
+++ b/frontend/src/components/AudioTour/AudioTour.css
@@ -58,8 +58,7 @@
 }
 
 .carouselDiv {
-  position: absolute;
-  top: 85%;
+  margin-top: 532px;
   left: 0;
   right: 0;
 }
@@ -73,5 +72,5 @@
 }
 
 .left-button {
-  margin-left: 20px;
+  margin-left: 24px;
 }
