--- a/frontend/src/components/MapContainer.css
+++ b/frontend/src/components/MapContainer.css
@@ -1,7 +1,7 @@
 .map > div {
-  height: 80% !important;
+  height: 75% !important;
 }
 
 .map {
-  height: 80% !important;
+  height: 75% !important;
 }
